<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="24dp"
    android:paddingLeft="42dp"
    android:paddingRight="42dp"
    android:paddingTop="42dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            fontPath="fonts/Lato-Black.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup_register"
            android:textColor="@color/colorTextPrimary"
            android:textSize="45sp"
            tools:ignore="MissingPrefix" />

        <TextView
            android:layout_marginBottom="24dp"
            fontPath="fonts/Street.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/signup_terms"
            android:textColor="@color/colorTextHint"
            android:textSize="12sp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/register_email"
            fontPath="fonts/Street.ttf"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:inputType="textEmailAddress"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_white_stroke"
            android:gravity="center"
            android:hint="@string/sign_up_email"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            android:textSize="15sp"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/register_passowrd"
            fontPath="fonts/Street.ttf"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_white_stroke"
            android:gravity="center"
            android:textSize="15sp"
            android:hint="@string/sign_up_password"
            android:inputType="textPassword"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            tools:ignore="MissingPrefix" />

        <EditText
            android:id="@+id/register_passowrd_retype"
            fontPath="fonts/Street.ttf"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/edit_white_stroke"
            android:gravity="center"
            android:textSize="15sp"
            android:hint="@string/sign_up_confirm"
            android:inputType="textPassword"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary"
            tools:ignore="MissingPrefix" />

        <Button
            android:id="@+id/register_register"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            fontPath="fonts/Street.ttf"
            android:background="@drawable/button_round"
            android:text="@string/sign_up_submit"
            android:textAllCaps="false"
            android:textColor="@color/colorTextPrimary"
            tools:ignore="MissingPrefix" />


    </LinearLayout>
</LinearLayout>