<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fragment_feedback_leave_us_a_message"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/fragment_feedback_message"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_black_stroke"
        android:gravity="top"
        android:hint="@string/fragment_feedback_enter_your_message"
        android:padding="4dp"
        android:textColorHint="@color/colorTextHintDark"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorTextPrimaryDark"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/fragment_feedback_send_message"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:background="@drawable/button_black_stroke"
            android:gravity="center"
            android:text="@string/fragment_feedback_send"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/fragment_feedback_found_a_bug"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/button_black_stroke"
        android:gravity="top"
        android:hint="@string/fragment_feedback_describe_the_steps_so_we_can_recreate_the_bug"
        android:padding="4dp"
        android:textColorHint="@color/colorTextHintDark"
        android:textSize="15sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorTextPrimaryDark"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/fragment_feedback_send_bug"
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:background="@drawable/button_black_stroke"
            android:gravity="center"
            android:text="@string/fragment_feedback_send"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Liked the app? Rate us!"
            android:textColor="@color/colorTextPrimaryDark"
            android:textSize="17sp" />

        <TextView
            android:layout_width="75dp"
            android:layout_height="30dp"
            android:background="@drawable/button_black_stroke"
            android:gravity="center"
            android:text="@string/fragment_feedback_rate_us"
            android:textColor="@color/colorPrimary" />


    </LinearLayout>


</LinearLayout>