<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.aavjaav.qd.aavjaav.view.activities.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

        </android.support.design.widget.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/appbar"
            android:orientation="vertical"
            android:padding="16dp">


            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_change_password_current"
                    android:inputType="textPassword"
                    android:paddingBottom="12dp"
                    android:textColorHint="@color/colorTextHintDark"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_change_password_new"
                    android:inputType="textPassword"
                    android:paddingBottom="12dp"
                    android:textColorHint="@color/colorTextHintDark"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/activity_change_password_confirm"
                    android:inputType="textPassword"
                    android:paddingBottom="12dp"
                    android:textColorHint="@color/colorTextHintDark"
                    android:textSize="17sp" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorAccent"
            android:gravity="center"
            android:text="Save Changes"
            android:textColor="@android:color/white"
            android:textSize="18sp" />


    </RelativeLayout>

</android.support.design.widget.CoordinatorLayout>



